--- a/app/src/main/res/layout/activity_user_info_layout.xml
+++ b/app/src/main/res/layout/activity_user_info_layout.xml
@@ -15,8 +15,8 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:cacheColorHint="#00000000"
-        android:divider="#e0dad2"
-        android:dividerHeight="1dp"
+        android:divider="@color/trans"
+        android:dividerHeight="10dp"
         android:fadingEdge="none"
         android:layout_marginTop="2dp"
         android:fastScrollEnabled="false"
