--- a/app/src/main/res/layout/item_customer_history.xml
+++ b/app/src/main/res/layout/item_customer_history.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:orientation="horizontal"
+    android:id="@+id/rl_hitory"
     android:paddingBottom="10dp"
     android:paddingTop="10dp">
 
