--- a/app/src/main/res/layout/layout_head_title.xml
+++ b/app/src/main/res/layout/layout_head_title.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:textStyle="bold"
-            android:textColor="@color/title_text_color"
+            android:textColor="@color/color_f6f2ed"
             android:textSize="17sp" />
 
         <TextView
