--- a/app/src/main/res/layout/layout_head_title.xml
+++ b/app/src/main/res/layout/layout_head_title.xml
@@ -49,7 +49,7 @@
             android:gravity="center_vertical"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:textColor="@color/white"
+            android:textColor="@color/color_f6f2ed"
             android:textSize="15sp"
             android:visibility="gone" />
 
