--- a/app/src/main/res/layout/activity_room_list_layout.xml
+++ b/app/src/main/res/layout/activity_room_list_layout.xml
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
         <TextView
+            android:id="@+id/add"
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:background="@color/app_red_color"
