--- a/app/src/main/res/layout/room_item_layout.xml
+++ b/app/src/main/res/layout/room_item_layout.xml
@@ -5,8 +5,8 @@
     <TextView
         android:id="@+id/room_name"
         android:layout_centerInParent="true"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="155dp"
+        android:layout_height="40dp"
         android:textSize="16sp"
         android:textColor="@color/app_red_color"
         android:background="@drawable/corner_remote_room_item"
