--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -122,5 +122,7 @@
     <color name="color_f6f2ed">#f6f2ed</color>
     <color name="color_bottom_text">#616161</color>
     <color name="color_bottom_bg">#F6F2ED</color>
+    <color name="color_14b2fc">#14b2fc</color>
+
 
 </resources>
