--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -69,8 +69,8 @@
                 android:layout_marginLeft="10dp"
                 android:gravity="left|center_vertical"
                 android:text="何竹冬"
-                android:textColor="@android:color/black"
-                android:textSize="15sp" />
+                android:textColor="@color/color_222222"
+                android:textSize="16sp" />
             <TextView
                 android:id="@+id/tv_num"
                 android:layout_width="wrap_content"
@@ -78,7 +78,7 @@
                 android:layout_marginLeft="10dp"
                 android:gravity="left|center_vertical"
                 android:text="标题"
-                android:textColor="@android:color/black"
+                android:textColor="@color/color_label"
                 android:textSize="14sp" />
         </LinearLayout>
 
