--- a/app/src/main/res/layout/activity_slide_preview.xml
+++ b/app/src/main/res/layout/activity_slide_preview.xml
@@ -9,7 +9,7 @@
         android:id="@+id/subtitle_layout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/top_height"
-        android:background="@color/title_bg">
+        android:background="@color/colorPrimaryDark">
 
         <LinearLayout
             android:id="@+id/back"
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/my_photo"
-            android:textColor="@color/black"
+            android:textColor="@color/color_f6f2ed"
             android:textSize="@dimen/title_text_size" />
         </RelativeLayout>
     <android.support.v4.view.ViewPager
