--- a/app/src/main/res/layout/activity_add_book_layout.xml
+++ b/app/src/main/res/layout/activity_add_book_layout.xml
@@ -34,16 +34,33 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
-                    <EditText
-                        android:maxLength="8"
-                        android:textSize="14sp"
-                        android:id="@+id/et_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:background="@color/transparent"
-                        android:drawableLeft="@drawable/ico_person"
-                        android:drawablePadding="10dp"
-                        android:hint="请输入客户名称" />
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <EditText
+                            android:maxLength="8"
+                            android:textSize="14sp"
+                            android:id="@+id/et_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="30dp"
+                            android:background="@color/transparent"
+                            android:drawableLeft="@drawable/ico_person"
+                            android:drawablePadding="10dp"
+                            android:hint="请输入客户名称" />
+                        <TextView
+                            android:layout_marginLeft="20dp"
+                            android:textColor="@color/app_red_color"
+                            android:text="( 必填 )"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+
+
+
+
+
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="0.5dp"
@@ -54,7 +71,7 @@
 
                     <LinearLayout
                         android:orientation="horizontal"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
                         <EditText
                             android:maxLength="11"
@@ -68,6 +85,7 @@
                             android:drawableLeft="@drawable/ico_phone"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
+
                     </LinearLayout>
                 </LinearLayout>
 
@@ -129,6 +147,14 @@
                     android:drawableLeft="@drawable/tjyd_rs"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="150dp"
+                    android:layout_marginTop="8dp"
+                    android:textColor="@color/app_red_color"
+                    android:text="( 必填 )"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
             </RelativeLayout>
 
@@ -163,6 +189,16 @@
                     android:src="@drawable/arraw_right"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
+                <TextView
+
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="150dp"
+                    android:layout_marginTop="8dp"
+                    android:textColor="@color/app_red_color"
+                    android:text="( 必填 )"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
             </RelativeLayout>
             <View
                 android:id="@+id/line3"
@@ -204,7 +240,7 @@
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="15dp"
                 android:background="@color/divider_list" />
-            
+
             <RelativeLayout
                 android:layout_marginTop="15dp"
                 android:layout_below="@id/line4"
